[project]
name = "gym_management_system"
authors = [
    { name = "Nestorbird_Trainee_Team", email = "Gym.Management@Gymmer.com"}
]
description = "Gym management software provides a forum for exchanging details about timetables, class availability, and any modifications or updates between gym owners, staff, and members."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
